--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
-		<meta charset="utf-8">
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 		<title>simon</title>
 	</head>
 	<body>
-		<div class="title"> <h1>Press a key to start </h1></div>
+		<div class="title" > 
+			<h1 id="instruction1">Press a key to start </h1>
+			<h1 id="instruction2">Click on screen to start </h1>
+		</div>
 		<div class="outerCont">
 			<div class="gridContainer">
 				<div class="gridItem item1" id="one"></div>
